Fixes z-index issues with mapPoints open and closing over each other.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1185,7 +1185,7 @@ html, body{
 
 						border-radius: 5px 5px 0 0;
 
-						z-index: 20;
+						/*z-index: 20;*/
 
 						padding: 15px 20px 0 20px;
 
